--- a/Project2/Project2.csproj
+++ b/Project2/Project2.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Compile Include="AS.cs" />
     <Compile Include="AutonomousSystems.cs" />
+    <Compile Include="EvalSet.cs" />
     <Compile Include="IPRange.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="Program.cs" />
